# git-impact

./: .gitignore  AGENTS.md  Cargo.toml  README.md  git-impact.example.yaml  git-impact.yaml
.github/workflows/: release.yml
examples/: git-impact.aiagent.yaml
skills/git-impact-automation/: SKILL.md
skills/git-impact-automation/agents/: openai.yaml
skills/git-impact-quality-hooks/: SKILL.md
skills/git-impact-quality-hooks/agents/: openai.yaml
src/: agent.rs  cli.rs  config.rs  git.rs  graph.rs  init.rs  main.rs  render.rs  runner.rs
