[package]
name = "git-impact"
version = "0.1.0"
edition = "2024"
description = "Run commands for Git changes expanded through a dependency graph"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
